--- a/src/views/css/userProfile.css
+++ b/src/views/css/userProfile.css
@@ -9,4 +9,18 @@
 	height: 96px ;
 	border: 1px solid black ;
 	margin: auto;
+	object-fit: cover;
+}
+
+.profile-image img {
+	width: 100%;
+	height: 100%;
+}
+
+.privacy-opt-select {
+	width: fit-content ;
+}
+
+.form-label {
+	font-weight: bold ;
 }
