--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 /* Container for body-content (between header and footer) */
 .my-container {
-	 min-height: max(100vh, 800px); /* Ensure footer is far enough down if the rest of the content takes up insufficient vertical space */
+	min-height: max(100vh, 800px);
+	padding: 0;
+	margin: 0;
+	max-width: 1550px;
+	/* Ensure footer is far enough down if the rest of the content takes up insufficient vertical space */
+	background-color: #212529;
+
+}
+
+.main-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
