--- a/src/views/css/userProfile.css
+++ b/src/views/css/userProfile.css
@@ -1,24 +1,13 @@
+.user-profile {
+	color: #eee;
+}
+
 .image-upload-container-outer {
+	margin: auto;
+	width: 280px;
 	padding: 16px;
 	border: 1px solid #ccc ;
 	border-radius: 8px ;
-}
-
-.profile-image {
-	width: 96px ;
-	height: 96px ;
-	border: 1px solid black ;
-	margin: auto;
-	object-fit: cover;
-}
-
-.profile-image img {
-	width: 100%;
-	height: 100%;
-}
-
-.privacy-opt-select {
-	width: fit-content ;
 }
 
 .form-label {
