--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,25 @@
 /* Container for body-content (between header and footer) */
+
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+
 .my-container {
 	min-height: max(100vh, 800px);
 	padding: 0;
 	margin: 0;
-	max-width: 1550px;
+	min-width: 100vw;
+	/* max-width: 1550px; */
 	/* Ensure footer is far enough down if the rest of the content takes up insufficient vertical space */
 	background-color: #212529;
 	color: #fff;
-
 }
 
 .main-container {
-	/* display: flex; */
-	/* flex-direction: column; */
-	/* justify-content: center; */
-	/* align-items: center; */
-	height: 100vh;
+	min-height: 100vh;
+	padding-top: 30px;
 }
