--- a/src/components/css/RecipeCard.scss
+++ b/src/components/css/RecipeCard.scss
@@ -1,9 +1,4 @@
 
-.the-row {
-    margin: 0;
-}
-
-
 .search-column {
     display: flex;
     flex-direction: column;
@@ -36,10 +31,74 @@
                 font-size: 1rem;
                 font-weight: bold;
             }
+        }    
+    }
+}
+.search-one {
+    height: fit-content;
+    margin-top: 50px;
+}
 
-
-        }
+.modal-content {
+    background-color: #212529 !important;
+    color: white !important;
+    
+    .row {
+        column-gap: 2rem;
+        padding: 1.5rem;
+        display: flex;
+        justify-content: center; 
+        flex-wrap: wrap;     
     }
 
+    .img-modal-recipe {
+        width: 100%;
+        height: auto;
+    }
+
+    .img-ingredient {
+        height: min(50px, 5vw);
+        width: auto;
+    }
+
+    .ingredient-wrapper {
+        padding: 0;
+        width: 130px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        column-gap: 1rem;
+        row-gap: 0.5rem;
+        margin-bottom: 1.5rem;
+    }
 }
+
+@media screen and (max-width: 998px) {
+    .modal-content {
+        .row {
+            .ingredients {
+                order: 2;
+            }
+
+            .ingredient-wrapper {
+                width: 100%;
+                row-gap: 1rem;
+
+                .img-ingredient {
+                    width: 200px;
+                    height: auto;
+                }
+            }
+
+            img {
+                width: 300px;
+                height: auto;
+                padding: 1rem;
+            }  
+        }
+    }
+}
+    
+
 
