--- a/src/components/css/RecipeCard.scss
+++ b/src/components/css/RecipeCard.scss
@@ -18,7 +18,7 @@
 
         .recipe-card {
             width: 150px !important;
-            min-height: 250px;
+            min-height: 100px;
             border: 1px solid black;
             margin: 20px;
             color: black;
@@ -62,7 +62,7 @@
     }
 
     .ingredient-wrapper {
-        padding: 0;
+        padding: 10px 0 0 0;
         width: 130px;
         display: flex;
         flex-direction: column;
@@ -71,7 +71,15 @@
         column-gap: 1rem;
         row-gap: 0.5rem;
         margin-bottom: 1.5rem;
+
+        &:hover {
+            background-color: rgb(127, 255, 212, 0.5);
+            transform: translateY(-10px);
+            transform: translateY(5px);
+        }
     }
+
+    
 }
 
 @media screen and (max-width: 998px) {
