--- a/src/views/css/UserRegister.scss
+++ b/src/views/css/UserRegister.scss
@@ -1,13 +1,11 @@
-
-.login-wrapper {
+.register-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     
-    .login-form {
-        margin-top: 50px;
-        width: 300px
+    .register-form {
+        width: 400px
     }
 
     .logo-login {
