--- a/src/components/css/SingleWorkoutCard.scss
+++ b/src/components/css/SingleWorkoutCard.scss
@@ -18,6 +18,11 @@
 		text-align: center;
 	}
 
+	.logo {
+		width: 50px;
+		height: 50px;
+	}
+
 	.card {
 		text-transform: capitalize;
 		color: #212529;
