--- a/src/components/css/RecipeCard.scss
+++ b/src/components/css/RecipeCard.scss
@@ -1,4 +1,22 @@
 
+@mixin orange-button {
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #f09819;
+    background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%) !important;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
 .search-column {
     display: flex;
     flex-direction: column;
@@ -6,8 +24,20 @@
     align-items: center;
     padding: 20px;
 
-    button {
+    .btn-orange {
+        @include orange-button;
         margin: 10px;
+    }
+
+    .btn-orange:hover {
+        background-position: right center;
+        /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+      }
+      
+    .btn-orange:active {
+        transform: scale(0.95);
     }
 
     .recipe-wrapper {
