--- a/src/components/css/communityPosts.scss
+++ b/src/components/css/communityPosts.scss
@@ -22,21 +22,62 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+   
 
     .post-card {
+        box-shadow: rgba(50, 50, 93, 0.15) 0px 30px 60px -12px inset, rgba(168, 164, 164, 0.15) 0px 18px 36px -18px inset;
         color: black;
-        width: 100% !important;
-
+        min-width: 600px !important;
+        margin: 0.1rem 0;
+        padding: 0 !important;
+        
         .post-card-body {
+            display: flex;
+            padding: 0.3rem !important;
+
+            .post-card-image {
+                margin-right: 0.9rem;
+                width: 60px;
+                height: 60px;
+                object-fit: cover;
+                object-position: center;
+                border-radius: 50%;
+                cursor: pointer;
+            }
             .card-title {
-                font-size: 1.1rem;
-                font-weight: 700;
+                font-size: 1rem;
+                font-weight: 600;
             }
 
             .card-text {
-                font-size: 0.9rem;
-                font-weight: 400;
+                min-width: 370px;
+                font-size: 0.8rem;
+                font-weight: 500;
+                cursor: pointer;
             }
+
+            .heart {
+                margin: 0.3rem 1rem 0 0.5rem;
+            }
+
+            .comments {
+                margin: 0.3rem 0rem 0 0.5rem;
+            }
+
+            .lol {
+                margin: 0.3rem 0.5rem 0 0;
+            }
+
+            .post-icon-wrapper {
+                display: flex;
+                flex-direction: column;
+                margin: 0 0.5rem 0 0.5rem;
+
+                .post-card-numbers > * {
+                    margin: 0.3rem 0.9rem 0 0.9rem;
+                    font-size: 0.8rem
+                }
+            }          
         }    
     }    
 }
@@ -56,4 +97,17 @@
       .btn-orange:active {
         transform: scale(0.95);
       }
+}
+
+@media screen and (min-width: 280px) and (max-width: 900px) {
+    .posts-wrapper {
+        .post-card {
+            max-width: 100px !important;
+            // flex-direction: column !important;
+
+            .card-text {
+                width: 50px;
+            }
+        }
+    }
 }
