AJ: library added, recipe cards sorted, likes and counters working

--- a/src/views/css/PostPage.scss
+++ b/src/views/css/PostPage.scss
@@ -101,6 +101,14 @@
 
                 .post-page-icons {
 
+                    .heart {
+                        cursor: pointer;
+                    }
+
+                    .lol {
+                        cursor: pointer;
+                    }
+
                     margin-left: 20px !important;
                     margin-right: 10px !important;
 
