--- a/src/components/css/RecipeCard.scss
+++ b/src/components/css/RecipeCard.scss
@@ -56,7 +56,7 @@
 
             &:hover {
                 cursor: pointer;
-                background-color: aquamarine;
+                background-image: linear-gradient(45deg, #f57960 0%, #f3ac48  51%, #f77257  100%) !important;
                 transform: translateY(-10px);
                 transform: translateY(5px);
             }
