--- a/src/components/css/communityPosts.scss
+++ b/src/components/css/communityPosts.scss
@@ -58,6 +58,7 @@
 
             .heart {
                 margin: 0.3rem 1rem 0 0.5rem;
+                cursor: pointer;
             }
 
             .comments {
@@ -66,6 +67,7 @@
 
             .lol {
                 margin: 0.3rem 0.5rem 0 0;
+                cursor: pointer;
             }
 
             .post-icon-wrapper {
