--- a/src/views/css/Comment.scss
+++ b/src/views/css/Comment.scss
@@ -1,4 +1,34 @@
 .comment-card {
     color: black;
     min-width: 80% !important;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+
+    .username {
+        font-weight: 550;
+    }
+
+    .time {
+        position: absolute;
+        right: 100px;
+        top: 20px;
+        font-weight: 550;
+    }
+
+    .date {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        font-weight: 550;
+    }
+
+    .comment-card-image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin: 10px;
+        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                    
+    }
 }
