--- a/src/views/css/Community.scss
+++ b/src/views/css/Community.scss
@@ -11,13 +11,49 @@
 
     .community-left-panel {
         @include flex-center(column);
-    }
 
-    .community-right-panel {
-        @include flex-center(column);
-    }
+        .community-left-panel-wrapper {
+            @include flex-center(column);
+            padding: 20px;
 
+            .form-search {
+                @include flex-center(column);
+
+            }
+
+            .user-card {
+                @include flex-center(column);
+                color: black;
+                width: 70% !important;
+                margin-top: 30px;
+                
+            .card-img-top {
+                width: 100%;
+                height: auto;
+                margin: 10px;
+                box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+            }
+
+            .icons {
+                @include flex-center(row);
+            //     margin-left: 20px !important;
+            //     margin-right: 10px !important;
+
+                * {
+                    margin: 0 20px 0 20px;
+                }
+            }
+            
+        }
+    }
+}
+
+        .community-right-panel {
+            @include flex-center(column);
+        }
+ 
     button {
+        margin: 20px;
         text-align: center;
         text-transform: uppercase;
         transition: 0.5s;
