--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,8 @@ body {
 .my-container {
 	min-height: max(100vh, 800px);
 	padding-top: 30px;
-	padding-left: 0;
+	padding-left: 8px;
+	padding-right: 8px;
 	color: #fff;
 }
 
