--- a/src/components/css/messageCard.scss
+++ b/src/components/css/messageCard.scss
@@ -1,8 +1,8 @@
 .component-message-card {
-	height: 100% ;
-	color: black;
+	color: #222;
 	box-shadow: 5px -5px 10px -1px #111111;
-	
+	background-color: #ffe0ff ;
+
 	p {
 		line-height: 1em;
 	}
