--- a/src/components/css/notificationCard.scss
+++ b/src/components/css/notificationCard.scss
@@ -15,3 +15,11 @@
 		vertical-align: unset;
 	}
 }
+
+.notification-message-card-color {
+	background-color: #ffe0ff ;
+}
+
+.notification-contactreq-card-color {
+	background-color: #ffd0c0 ;
+}
