--- a/src/components/css/contactCard.scss
+++ b/src/components/css/contactCard.scss
@@ -1,7 +1,7 @@
 .component-contact-card {
-	height: 100% ;
-	color: black;
+	color: #222;
 	box-shadow: 5px -5px 10px -1px #111111;
+	background-color: #ffd0c0 ;
 
 	.contact-card-image {
 		width: 64px ;
