--- a/src/components/css/RecipeCard.scss
+++ b/src/components/css/RecipeCard.scss
@@ -67,6 +67,8 @@
             }
             .card-text {
                 text-align: center;
+                display: flex;
+                justify-content: center;
             }
 
             .card-title {
