--- a/src/views/css/Comment.scss
+++ b/src/views/css/Comment.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    margin: 0.1rem 0;
 
     .username {
         font-weight: 550;
