Added BMI calculator

--- a/src/views/css/Dashboard.scss
+++ b/src/views/css/Dashboard.scss
@@ -1,4 +1,8 @@
 .page-dashboard {
+	display: flex ;
+	flex-direction: column ;
+	gap: 32px;
+	
 	.my-notifications {
 		display: flex ;
 		flex-direction: column ;
