--- a/src/views/css/Community.scss
+++ b/src/views/css/Community.scss
@@ -13,7 +13,7 @@
         @include flex-center(column);
 
         .community-left-panel-wrapper {
-            height: 100vh;
+            min-height: 100vh;
             padding: 20px;
 
             .form-search {
