--- a/src/views/css/Comment.scss
+++ b/src/views/css/Comment.scss
@@ -6,6 +6,10 @@
     position: relative;
     margin: 0.1rem 0;
 
+    .comment-body {
+        width: 80%;
+    }
+
     .username {
         font-weight: 550;
     }
@@ -32,4 +36,6 @@
         box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
                     
     }
+
+    
 }
