--- a/src/views/css/CustomWorkout.scss
+++ b/src/views/css/CustomWorkout.scss
@@ -1,8 +1,24 @@
 @mixin flex-center($direction: row) {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: $direction;
+}
+
+@mixin orange-button() {
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #f09819;
+    background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
 .custom-workout-container{
@@ -12,67 +28,85 @@
     @include flex-center();
     flex-wrap: wrap;
 
-
     .left-section {
-        @include flex-center(column);
+        height: 100vh;
+        @include flex-center(column);   
     }
 
     .right-section {
         @include flex-center();
+        min-height: 100vh;
         padding-top: 30px;
 
         .form-section {
             @include flex-center(column);
-            width: 70%;
+            align-items: center;
             margin: 0 10px;    
 
-        .form {
-            width: 80%;
+            .form-add-exercise {
+                @include flex-center(column);
+                align-items: center;
+                width: 60%;
 
-        }
-        .form-drop {
-            width: 50%;
-        }
-
-            button {
-                text-align: center;
-                text-transform: uppercase;
-                transition: 0.5s;
-                background-size: 200% auto;
-                color: white;
-                border-radius: 10px;
-                display: block;
-                border: 0px;
-                font-weight: 700;
-                box-shadow: 0px 0px 14px -7px #f09819;
-                background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
-                cursor: pointer;
-                user-select: none;
-                -webkit-user-select: none;
-                touch-action: manipulation;
+                .orange-button {
+                    width: 30%;
+                }
             }
-        
-            button:hover {
-                background-position: right center;
-                /* change the direction of the change here */
-                color: #fff;
-                text-decoration: none;
-              }
-              
-              button:active {
-                transform: scale(0.95);
-              }
-
-            }
+        }
 
             .card-section {
                 @include flex-center(column);
+                align-items: center;
                 width: 100%;
+                min-height: 100vh;
+
+                .form-drop-bodypart {
+                    width: 90%;
+                }
+
+                .exc-card {
+                    color: #000;
+                    width: 90%;
+                    margin: 5px;
+                    cursor: pointer;
+                }
+
+                .exc-card:hover {
+                    background-image: linear-gradient(45deg, #f57960 0%, #f3ac48  51%, #f77257  100%);
+                    color: #fff;
+                }
             }
 
+            .exc-list {
+                display: flex;
+                flex-direction: column;
+                align-items: left;
+                color: #000;
+                width: 100%;
+                min-height: 200px;
+                padding-top: 15px;
+                margin: 10px;
+                background-color: azure;
+                list-style: none;
+            }
     }
 
 }
+
+.orange-button {
+    @include orange-button();
+}
+
+.orange-button:hover {
+    background-position: right center;
+    /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .orange-button:active {
+    transform: scale(0.95);
+  }
 
 @media screen and (max-width: 668px) {
     .custom-workout-container {
