--- a/src/views/css/Library.scss
+++ b/src/views/css/Library.scss
@@ -1,7 +1,6 @@
 .recipe-wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
     column-gap: 1rem;
     row-gap: 1rem;
@@ -27,8 +26,11 @@
         padding: 5px !important;
 
     }
+    
     .card-text {
         text-align: center;
+        display: flex;
+        justify-content: center;
     }
 
     .card-title {
