--- a/src/views/css/PostPage.scss
+++ b/src/views/css/PostPage.scss
@@ -27,7 +27,7 @@
     @include flex-center;
 
     .post-page-left-panel {
-        height: 100vh;
+        min-height: 100vh;
         margin-top: 30px;
 
         .card {
@@ -148,8 +148,7 @@
     }
 
     .post-page-right-panel {
-        height: 100vh;
-        margin-top: 30px;
+        min-height: 100vh;
     }
 }
 
