Added specific weight-target setting + progress bar

--- a/src/views/css/UserProfile.scss
+++ b/src/views/css/UserProfile.scss
@@ -24,4 +24,10 @@
 	.form-label {
 		font-weight: bold ;
 	}
+
+	.user-profile-weight-goal {
+		width: 50%;
+		min-width:300px;
+		margin:auto;
+	}
 }
