--- a/src/components/css/RecipeCard.scss
+++ b/src/components/css/RecipeCard.scss
@@ -123,9 +123,11 @@
             transform: translateY(-10px);
             transform: translateY(5px);
         }
-    }
+    }       
+}
 
-    
+.table-nutrients {
+    color: fff !important;
 }
 
 @media screen and (max-width: 998px) {
