--- a/src/views/css/Community.scss
+++ b/src/views/css/Community.scss
@@ -13,6 +13,9 @@
         @include flex-center(column);
 
         .community-left-panel-wrapper {
+            display: flex;   
+            align-items: center;
+            flex-direction: column;
             min-height: 100vh;
             padding: 20px;
 
@@ -23,8 +26,9 @@
             .user-card {
                 @include flex-center(column);
                 color: black;
-                width: 70% !important;
+                width: 50% !important;
                 margin-top: 30px;
+                border: none !important;
 
                 .user-card-username {
                     font-weight: 550;
@@ -36,7 +40,6 @@
                     width: 100%;
                     height: auto;
                     background: cover;
-                    margin: 10px;
                     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
                 }
 
