--- a/src/views/css/CustomWorkout.scss
+++ b/src/views/css/CustomWorkout.scss
@@ -30,18 +30,33 @@
 
     .left-section {
         height: 100vh;
-        @include flex-center(column);   
+        @include flex-center(column);
+        overflow-y: scroll;
+        background-attachment: fixed;
+        -ms-overflow-style: none; /*  hide  scrollbar // IE and Edge */
+        scrollbar-width: none; /*   hide scrollbar // Firefox */   
     }
+
+    .left-section::-webkit-scrollbar {
+        display: none;
+      }
 
     .right-section {
         @include flex-center();
         min-height: 100vh;
         padding-top: 30px;
+        flex-wrap: wrap;
+        
 
         .form-section {
             @include flex-center(column);
             align-items: center;
-            margin: 0 10px;    
+            margin: 0 25px;; 
+            
+            hr.white {
+                border-color: #fff;
+                width: 100%
+            }
 
             .form-add-exercise {
                 @include flex-center(column);
@@ -49,7 +64,26 @@
                 width: 60%;
 
                 .orange-button {
-                    width: 30%;
+                    width: 100px;
+                }
+            }
+
+            .orange-btn {
+                @include orange-button();
+                width: 100px;
+                height: 40px;
+                font-size: 0.6rem;
+                margin-bottom: 10px;
+
+                &:hover {
+                    background-position: right center;
+                    /* change the direction of the change here */
+                    color: #fff;
+                    text-decoration: none;
+                }
+
+                &:active {
+                    transform: scale(0.95);
                 }
             }
         }
@@ -57,16 +91,34 @@
             .card-section {
                 @include flex-center(column);
                 align-items: center;
-                width: 100%;
-                min-height: 100vh;
+                margin: 25px 0;
+                height: 100vh;
+                overflow-y: scroll;
+                background-attachment: fixed;
+                -ms-overflow-style: none; /*  hide  scrollbar // IE and Edge */
+                scrollbar-width: none; /*   hide scrollbar // Firefox */   
 
-                .form-drop-bodypart {
-                    width: 90%;
+                .find-form {
+                    display: flex;
+                    column-gap: 5px;
+                    
+                    .form-drop-bodypart {
+                        width: 50%;
+                    }
+                }
+
+                input {
+                    border-radius: 10px;
+                    margin-top: 15px;
+                    font-size: 1.1rem;
+                    padding: 5px;
                 }
 
                 .exc-card {
                     color: #000;
                     width: 90%;
+                    padding: 5px;
+                    text-align: center;
                     margin: 5px;
                     cursor: pointer;
                 }
@@ -76,6 +128,10 @@
                     color: #fff;
                 }
             }
+
+            .card-section::-webkit-scrollbar {
+                display: none;
+              }
 
             .exc-list {
                 display: flex;
@@ -88,6 +144,7 @@
                 margin: 10px;
                 background-color: azure;
                 list-style: none;
+                border-radius: 5px;
             }
     }
 
@@ -117,7 +174,16 @@
         }
         .right-section {
             width: 100%;
+
             .form {
+                width: 100%;
+            }
+
+            .form-section {
+                width: 100%;
+            }
+
+            .card-section {
                 width: 100%;
             }
             .form-drop {
