--- a/src/views/css/UserRegister.scss
+++ b/src/views/css/UserRegister.scss
@@ -1,3 +1,21 @@
+@mixin orange-button() {
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #f09819;
+    background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
 .page-user-register {
     color: #eee;
     display: flex;
@@ -6,7 +24,28 @@
     align-items: center;
     
     .register-form {
-        width: 400px
+        width: 300px;
+
+        .button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+            .orange-button {
+                @include orange-button();
+            }
+            
+            .orange-button:hover {
+                background-position: right center;
+                /* change the direction of the change here */
+                color: #fff;
+                text-decoration: none;
+            }
+            
+            .orange-button:active {
+                transform: scale(0.95);
+            }
+        }
     }
 
     .logo-login {
