--- a/src/views/css/userPrefs.scss
+++ b/src/views/css/userPrefs.scss
@@ -1,6 +1,10 @@
 .page-user-prefs {
 	color: #eee;
 
+	h1 {
+		font-family: 'Raleway Dots', cursive;
+	}
+
 	.user-prefs {
 		max-width: 1140px;
 		margin: auto;
