--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Raleway:wght@200;300;400&family=Raleway+Dots&family=Rubik+Pixels&family=Sacramento&family=Special+Elite&display=swap');
+
+
 * {
 	margin: 0;
 	padding: 0;
