--- a/src/views/css/comment.scss
+++ b/src/views/css/comment.scss
@@ -5,9 +5,16 @@
     flex-direction: row;
     position: relative;
     margin: 0.1rem 0;
-
+    
+    
     .comment-body {
+        padding: 0.7rem;
         width: 80%;
+
+        p{
+
+            font-size: 0.9rem !important;
+        }
     }
 
     .username {
@@ -16,19 +23,22 @@
 
     .time {
         position: absolute;
-        right: 100px;
+        right: 85px;
         top: 20px;
         font-weight: 550;
+        font-size: 0.8rem;
     }
-
+    
     .date {
         position: absolute;
         right: 20px;
         top: 20px;
         font-weight: 550;
+        font-size: 0.8rem;
     }
 
     .comment-card-image {
+        object-fit: cover;
         width: 50px;
         height: 50px;
         border-radius: 50%;
