--- a/src/views/css/customPage.scss
+++ b/src/views/css/customPage.scss
@@ -4,18 +4,23 @@
     align-items: center;
     flex-direction: column;
 
+    h1 {
+        font-family: 'Rubik Pixels', cursive;
+    }
+
     .username {
         color: #f57960;
+        font-family: 'Rubik Pixels', cursive;
     }
 
     .date {
-        color: #f3ac48;
+        color: #308bf3;
+        font-family: 'Rubik Pixels', cursive;
     }
 
     .workout-image{
         width: 100%;
-        height: 200px;
-
+        height: 300px;
         object-fit: cover;
     }
 
