--- a/src/views/css/dashboard.scss
+++ b/src/views/css/dashboard.scss
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Raleway+Dots&family=Raleway:wght@200;300;400&family=Rubik+Pixels&family=Sacramento&family=Special+Elite&display=swap');
+
 .page-dashboard {
 	display: flex ;
 	flex-direction: column ;
 	gap: 32px;
+
+	h1, h2 {
+		font-family: 'Raleway Dots', cursive;
+	}
 	
 	.my-notifications {
 		display: flex ;
