--- a/src/views/css/userProfile.scss
+++ b/src/views/css/userProfile.scss
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Raleway+Dots&family=Raleway:wght@200;300;400&family=Rubik+Pixels&family=Sacramento&family=Special+Elite&display=swap');
+
 .page-user-profile {
 	color: #eee;
+
+	h1 {
+		font-family: 'Raleway Dots', cursive;
+	}
 
 	.user-profile {
 		max-width: 1140px;
