--- a/src/views/css/frontPage.scss
+++ b/src/views/css/frontPage.scss
@@ -13,6 +13,7 @@
         h1 {
             font-size: min(4rem, 10vw);
             text-align: center;
+            font-family: 'Raleway', sans-serif;
         }
     }
 
@@ -26,6 +27,7 @@
         h1 {
             font-size: min(3rem, 6vw);
             text-align: center;
+            font-family: 'Raleway', sans-serif;
         }
     }
     
