--- a/src/components/css/singleWorkoutCard.scss
+++ b/src/components/css/singleWorkoutCard.scss
@@ -1,97 +1,110 @@
 .component-single-workout-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+  
 	.card-container {
-		background: #212529;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
+	  background: #212529;
+	  display: flex;
+	  flex-wrap: wrap;
+	  justify-content: center;
 	}
-
+  
 	.card-container .card {
-		margin: 10px;
+	  margin: 10px;
 	}
-
+  
+	.card-container-2 .card {
+	  margin: 10px;
+	  width: 400px !important;
+	  display: flex;
+	  flex: wrap;
+	}
+  
+	.card-container-2 {
+	  display: flex;
+	  flex-wrap: wrap;
+	  justify-content: center;
+	}
+  
 	.card-body {
-		text-align: center;
+	  text-align: center;
 	}
-
+  
 	.logo {
-		width: 40px;
-		height: 40px;
+	  width: 40px;
+	  height: 40px;
 	}
-
+  
 	.card {
-		text-transform: capitalize;
-		color: #212529;
-		width: 200px !important;
+	  text-transform: capitalize;
+	  color: #212529;
+	  width: 200px !important;
 	}
-
+  
 	.card:hover {
-		background-color: aquamarine;
-		transform: translateY(-10px);
-		transform: translateY(5px);
-		cursor: pointer;
+	  background-color: aquamarine;
+	  transform: translateY(-10px);
+	  transform: translateY(5px);
+	  cursor: pointer;
 	}
-
+  
 	.load-more {
-		position: absolute;
-		justify-content: center;
-		display: flex;
-		flex-wrap: wrap;
-		margin: 100px;
+	  position: absolute;
+	  justify-content: center;
+	  display: flex;
+	  flex-wrap: wrap;
+	  margin: 100px;
 	}
-
+  
 	.load-more-btn {
-		background-color: transparent;
-		margin-top: 20px;
-		border: none;
+	  background-color: transparent;
+	  margin-top: 20px;
+	  border: none;
 	}
-
+  
 	.load-more-btn:hover {
-		color: black;
-		background-color: aquamarine;
-		transform: translateY(-10px);
-		transform: translateY(5px);
+	  color: black;
+	  background-color: aquamarine;
+	  transform: translateY(-10px);
+	  transform: translateY(5px);
 	}
-
+  
 	.scroll-to-top-btn {
-		background-color: transparent;
-		position: fixed;
-		bottom: 20px;
-		right: 20px;
-		border: none;
-		animation: bounce 1s ease-in-out infinite;
-		border-radius: 20%;
+	  background-color: transparent;
+	  position: fixed;
+	  bottom: 20px;
+	  right: 20px;
+	  border: none;
+	  animation: bounce 1s ease-in-out infinite;
+	  border-radius: 20%;
 	}
-
+  
 	@keyframes bounce {
-		0%,
-		20%,
-		50%,
-		80%,
-		100% {
-			transform: translateY(0);
-		}
-		40% {
-			transform: translateY(-20px);
-		}
-		60% {
-			transform: translateY(-10px);
-		}
-	}
-
-	.top {
-		width: 50px;
-		height: 60px;
-		border-radius: 20%;
-	}
-
-	.top:hover {
-		background-color: aquamarine;
+	  0%,
+	  20%,
+	  50%,
+	  80%,
+	  100% {
+		transform: translateY(0);
+	  }
+	  40% {
+		transform: translateY(-20px);
+	  }
+	  60% {
 		transform: translateY(-10px);
-		transform: translateY(5px);
+	  }
 	}
-}
+  
+	.top {
+	  width: 50px;
+	  height: 60px;
+	  border-radius: 20%;
+	}
+  
+	.top:hover {
+	  background-color: aquamarine;
+	  transform: translateY(-10px);
+	  transform: translateY(5px);
+	}
+  }
