--- a/src/views/css/challenge.scss
+++ b/src/views/css/challenge.scss
@@ -1,12 +1,30 @@
-  .challenge-card {
+  .challenge-wrapper {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    text-transform: capitalize;
-    color: #212529;
-    gap: 20px;
+    
+    .challenge-card {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      text-transform: capitalize;
+      color: #212529;
+      gap: 20px;
+
+      .card {
+        width: 90% !important;
+        border: none !important;
+
+        .card-img-top {
+          width: 100% !important;
+        }
+      }
+    }
   }
+
+    
+  
   
