--- a/src/views/css/comment.scss
+++ b/src/views/css/comment.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    margin: 0.1rem 0;
+    margin-bottom: 0.2rem;
     
     
     .comment-body {
@@ -12,29 +12,28 @@
         width: 80%;
 
         p{
-
             font-size: 0.9rem !important;
         }
     }
 
     .username {
-        font-weight: 550;
+        font-weight: bolder;
     }
 
     .time {
         position: absolute;
         right: 85px;
         top: 20px;
-        font-weight: 550;
-        font-size: 0.8rem;
+        font-weight: bolder;
+        font-size: 0.9rem;
     }
     
     .date {
         position: absolute;
         right: 20px;
         top: 20px;
-        font-weight: 550;
-        font-size: 0.8rem;
+        font-weight: bolder;
+        font-size: 0.9rem;
     }
 
     .comment-card-image {
@@ -45,7 +44,23 @@
         margin: 10px;
         box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
                     
-    }
+    }   
+}
 
-    
+@media only screen and (min-width: 200px) and (max-width: 768px) {
+    .comment-card {
+        width: 100% !important;
+        
+        .date {
+            top: 5px;
+            right: 10px;
+            font-size: 0.8rem;
+        }
+
+        .time {
+            top: 5px;
+            right: 70px;
+            font-size: 0.8rem;
+        }
+    }
 }
